fix project section alignment

--- a/src/styles/_queries.scss
+++ b/src/styles/_queries.scss
@@ -14,6 +14,10 @@
     }
 }
 
+.display-content {
+    display: flex;
+}
+
 @media (max-width: 991px) { /* Tablets (md to lg) */
     .home-content {
         display: flex;
@@ -38,6 +42,12 @@
             padding: 0 20px;
         }
     }
+
+    .display-content {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }    
 }
 
 
